@@ -1,4 +1,4 @@
-FROM eclipse-temurin:11 as builder
+FROM eclipse-temurin:17 as builder
 
 COPY . /usr/src/app
 WORKDIR /usr/src/app
@@ -6,19 +6,7 @@ RUN chmod +x gradlew
 RUN ./gradlew clean build
 RUN tar -xvf build/distributions/recorder-1.0.tar
 
-# Create a custom Java runtime
-RUN $JAVA_HOME/bin/jlink \
-         --add-modules java.base \
-         --strip-debug \
-         --no-man-pages \
-         --no-header-files \
-         --compress=2 \
-         --output /javaruntime
-
-FROM debian:bullseye-slim
-ENV JAVA_HOME=/opt/java/openjdk
-ENV PATH "${JAVA_HOME}/bin:${PATH}"
-COPY --from=builder /javaruntime $JAVA_HOME
+FROM eclipse-temurin:17
 
 ENV APPLICATION_USER ktor
 RUN useradd -ms /bin/bash $APPLICATION_USER
